// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactListItem should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="text-center border-b border-dashed border-theme-neutral-200"
        >
          <div
            class="flex items-center space-x-3"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 ikUhMz"
              data-testid="ContactListItem__user--avatar"
            >
              <img
                alt="Brian"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                title="Brian"
              />
              <span
                class="absolute text-sm font-semibold text-theme-background"
              >
                BR
              </span>
            </div>
            <span
              class="font-semibold"
              data-testid="ContactListItem__name"
            >
              Brian
            </span>
          </div>
        </td>
        <td
          class="text-center border-b border-dashed border-theme-neutral-200"
        >
          <div
            aria-label="Ark Devnet"
            class="sc-AxiKw eHzXqc border-theme-primary-100 text-theme-primary-400"
            data-testid="NetworkIcon-ARK-devnet"
          >
            <div
              class="sc-AxhCb fxrKLH"
              data-testid="NetworkIcon__icon"
              height="1em"
              width="1em"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="py-6 border-b border-dashed border-theme-neutral-200"
        >
          <div
            class="flex items-center space-x-3"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 SBrFf"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D61mfS…J3Dyib
              </span>
            </div>
          </div>
        </td>
        <td
          class="text-sm font-bold text-center border-b border-dashed space-x-2 border-theme-neutral-200"
        >
          <div
            class="sc-AxiKw eHzXqc border-black"
          >
            <div
              class="sc-AxhCb gZVKaf"
              height="25"
              width="25"
            >
              <svg>
                delegate.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-neutral-200"
        >
          <div
            class="flex justify-end"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="float-right"
              >
                <button
                  class="sc-AxirZ ggAYoh"
                  color="primary"
                  type="button"
                >
                  <div
                    class="sc-AxhCb VoPpj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ContactListItem should render with multiple addresses 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="text-center "
        >
          <div
            class="flex items-center space-x-3"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 ikUhMz"
              data-testid="ContactListItem__user--avatar"
            >
              <img
                alt="Brian"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                title="Brian"
              />
              <span
                class="absolute text-sm font-semibold text-theme-background"
              >
                BR
              </span>
            </div>
            <span
              class="font-semibold"
              data-testid="ContactListItem__name"
            >
              Brian
            </span>
          </div>
        </td>
        <td
          class="text-center "
        >
          <div
            aria-label="Ark Devnet"
            class="sc-AxiKw eHzXqc border-theme-primary-100 text-theme-primary-400"
            data-testid="NetworkIcon-ARK-devnet"
          >
            <div
              class="sc-AxhCb fxrKLH"
              data-testid="NetworkIcon__icon"
              height="1em"
              width="1em"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="py-6 border-b border-dashed border-theme-neutral-200"
        >
          <div
            class="flex items-center space-x-3"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 SBrFf"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D61mfS…J3Dyib
              </span>
            </div>
          </div>
        </td>
        <td
          class="text-sm font-bold text-center border-b border-dashed space-x-2 border-theme-neutral-200"
        >
          <div
            class="sc-AxiKw eHzXqc border-black"
          >
            <div
              class="sc-AxhCb gZVKaf"
              height="25"
              width="25"
            >
              <svg>
                delegate.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-neutral-200"
        >
          <div
            class="flex justify-end"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="float-right"
              >
                <button
                  class="sc-AxirZ ggAYoh"
                  color="primary"
                  type="button"
                >
                  <div
                    class="sc-AxhCb VoPpj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td
          class="text-center border-b border-dashed border-theme-neutral-200"
        />
        <td
          class="text-center border-b border-dashed border-theme-neutral-200"
        >
          <div
            aria-label="Ark Devnet"
            class="sc-AxiKw eHzXqc border-theme-primary-100 text-theme-primary-400"
            data-testid="NetworkIcon-ARK-devnet"
          >
            <div
              class="sc-AxhCb fxrKLH"
              data-testid="NetworkIcon__icon"
              height="1em"
              width="1em"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="py-6 border-b border-dashed border-theme-neutral-200"
        >
          <div
            class="flex items-center space-x-3"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 SBrFf"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D61mfS…J3Dyib
              </span>
            </div>
          </div>
        </td>
        <td
          class="text-sm font-bold text-center border-b border-dashed space-x-2 border-theme-neutral-200"
        >
          <div
            class="sc-AxiKw eHzXqc border-black"
          >
            <div
              class="sc-AxhCb gZVKaf"
              height="25"
              width="25"
            >
              <svg>
                delegate.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-neutral-200"
        />
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ContactListItem should render with multiple options 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="text-center "
        >
          <div
            class="flex items-center space-x-3"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 ikUhMz"
              data-testid="ContactListItem__user--avatar"
            >
              <img
                alt="Brian"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                title="Brian"
              />
              <span
                class="absolute text-sm font-semibold text-theme-background"
              >
                BR
              </span>
            </div>
            <span
              class="font-semibold"
              data-testid="ContactListItem__name"
            >
              Brian
            </span>
          </div>
        </td>
        <td
          class="text-center "
        >
          <div
            aria-label="Ark Devnet"
            class="sc-AxiKw eHzXqc border-theme-primary-100 text-theme-primary-400"
            data-testid="NetworkIcon-ARK-devnet"
          >
            <div
              class="sc-AxhCb fxrKLH"
              data-testid="NetworkIcon__icon"
              height="1em"
              width="1em"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="py-6 border-b border-dashed border-theme-neutral-200"
        >
          <div
            class="flex items-center space-x-3"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 SBrFf"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D61mfS…J3Dyib
              </span>
            </div>
          </div>
        </td>
        <td
          class="text-sm font-bold text-center border-b border-dashed space-x-2 border-theme-neutral-200"
        >
          <div
            class="sc-AxiKw eHzXqc border-black"
          >
            <div
              class="sc-AxhCb gZVKaf"
              height="25"
              width="25"
            >
              <svg>
                delegate.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-neutral-200"
        >
          <div
            class="flex justify-end"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="float-right"
              >
                <button
                  class="sc-AxirZ ggAYoh"
                  color="primary"
                  type="button"
                >
                  <div
                    class="sc-AxhCb VoPpj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td
          class="text-center border-b border-dashed border-theme-neutral-200"
        />
        <td
          class="text-center border-b border-dashed border-theme-neutral-200"
        >
          <div
            aria-label="Ark Devnet"
            class="sc-AxiKw eHzXqc border-theme-primary-100 text-theme-primary-400"
            data-testid="NetworkIcon-ARK-devnet"
          >
            <div
              class="sc-AxhCb fxrKLH"
              data-testid="NetworkIcon__icon"
              height="1em"
              width="1em"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="py-6 border-b border-dashed border-theme-neutral-200"
        >
          <div
            class="flex items-center space-x-3"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 SBrFf"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D61mfS…J3Dyib
              </span>
            </div>
          </div>
        </td>
        <td
          class="text-sm font-bold text-center border-b border-dashed space-x-2 border-theme-neutral-200"
        >
          <div
            class="sc-AxiKw eHzXqc border-black"
          >
            <div
              class="sc-AxhCb gZVKaf"
              height="25"
              width="25"
            >
              <svg>
                delegate.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-neutral-200"
        />
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ContactListItem should render with one option 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="text-center "
        >
          <div
            class="flex items-center space-x-3"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 ikUhMz"
              data-testid="ContactListItem__user--avatar"
            >
              <img
                alt="Brian"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                title="Brian"
              />
              <span
                class="absolute text-sm font-semibold text-theme-background"
              >
                BR
              </span>
            </div>
            <span
              class="font-semibold"
              data-testid="ContactListItem__name"
            >
              Brian
            </span>
          </div>
        </td>
        <td
          class="text-center "
        >
          <div
            aria-label="Ark Devnet"
            class="sc-AxiKw eHzXqc border-theme-primary-100 text-theme-primary-400"
            data-testid="NetworkIcon-ARK-devnet"
          >
            <div
              class="sc-AxhCb fxrKLH"
              data-testid="NetworkIcon__icon"
              height="1em"
              width="1em"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="py-6 border-b border-dashed border-theme-neutral-200"
        >
          <div
            class="flex items-center space-x-3"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 SBrFf"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D61mfS…J3Dyib
              </span>
            </div>
          </div>
        </td>
        <td
          class="text-sm font-bold text-center border-b border-dashed space-x-2 border-theme-neutral-200"
        >
          <div
            class="sc-AxiKw eHzXqc border-black"
          >
            <div
              class="sc-AxhCb gZVKaf"
              height="25"
              width="25"
            >
              <svg>
                delegate.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-neutral-200"
        >
          <button
            class="sc-AxirZ fhzkRl float-right"
            color="primary"
            data-testid="ContactListItem__one-option-button-0"
            type="button"
          >
            Option 1
          </button>
        </td>
      </tr>
      <tr>
        <td
          class="text-center border-b border-dashed border-theme-neutral-200"
        />
        <td
          class="text-center border-b border-dashed border-theme-neutral-200"
        >
          <div
            aria-label="Ark Devnet"
            class="sc-AxiKw eHzXqc border-theme-primary-100 text-theme-primary-400"
            data-testid="NetworkIcon-ARK-devnet"
          >
            <div
              class="sc-AxhCb fxrKLH"
              data-testid="NetworkIcon__icon"
              height="1em"
              width="1em"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="py-6 border-b border-dashed border-theme-neutral-200"
        >
          <div
            class="flex items-center space-x-3"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 SBrFf"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D61mfS…J3Dyib
              </span>
            </div>
          </div>
        </td>
        <td
          class="text-sm font-bold text-center border-b border-dashed space-x-2 border-theme-neutral-200"
        >
          <div
            class="sc-AxiKw eHzXqc border-black"
          >
            <div
              class="sc-AxhCb gZVKaf"
              height="25"
              width="25"
            >
              <svg>
                delegate.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-neutral-200"
        />
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
